<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6D4D4"
    app:backgroundTint="@null"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_header"
        android:layout_width="match_parent"
        app:cardElevation="5dp"
        app:cardBackgroundColor="#E91E63"
        app:cardCornerRadius="30dp"
        android:layout_height="120dp"
        android:layout_marginTop="-30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_simple_online_calc_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simple_online_calculator"
                android:layout_marginTop="40dp"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:textFontWeight="700"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:targetApi="p" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/cv_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="10dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/ev_hello"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="Enter input parameter as the format (E.g 10,10,10)"
                android:inputType="text"
                android:text="@string/input_parameter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_operation"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toEndOf="@+id/ev_hello"
                app:layout_constraintTop_toTopOf="@+id/ev_hello"
                app:layout_constraintBottom_toBottomOf="@id/ev_hello">

                <TextView
                    android:id="@+id/dropdown_hello"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:autofillHints="masukkan"
                    android:text="@string/add"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.utils.widget.ImageFilterView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_arrow_drop_down_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/dropdown_hello"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



    <Button
        android:id="@+id/btn_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#E91E63"
        app:backgroundTint="@null"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_input"
        tools:ignore="TextContrastCheck" />
    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:text="@string/welcome_to_simple_online_calculator"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:gravity="center_horizontal"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_hello" />


</androidx.constraintlayout.widget.ConstraintLayout>